--- a/JXPairS/document/模型结果记录.md
+++ b/JXPairS/document/模型结果记录.md
@@ -177,6 +177,584 @@ Process finished with exit code 0
 
 Train Loss和Val Loss差别不大，数据量比较少，欠拟合
 
+### HANConcatAlign 76.55%
+
+```
+ssh://chiyao@10.176.37.201:22/home/chiyao/anaconda3/envs/han/bin/python -u /home/chiyao/projects/Chinese-Text-Classification-Pytorch/run.py --model HANConcatAlign
+HANConcatAlign
+Loading data...
+Vocab size: crime: 384, judge: 5296, performance: 7159, fact: 10002, article: 229
+crime_max_length 3
+judge_max_length (5, 9)
+performance_max_length (6, 10)
+fact_max_length (8, 34)
+article_max_length (8, 8)
+30012it [00:21, 1409.44it/s]
+3322it [00:02, 1450.24it/s]
+3322it [00:02, 1455.03it/s]
+train dataset len: 30012
+dev dataset len: 3322
+test dataset len: 3322
+Time usage: 0:00:33
+<bound method Module.parameters of Model(
+  (crime_encoder): WordAttNet(
+    (lookup): Embedding(384, 300)
+    (gru): GRU(300, 128, bidirectional=True)
+  )
+  (judge_encoder): HierAttNet(
+    (word_att_net): WordAttNet(
+      (lookup): Embedding(5296, 300)
+      (gru): GRU(300, 128, bidirectional=True)
+    )
+    (sent_att_net): SentAttNet(
+      (gru): GRU(256, 128, bidirectional=True)
+    )
+  )
+  (performance_encoder): HierAttNet(
+    (word_att_net): WordAttNet(
+      (lookup): Embedding(7159, 300)
+      (gru): GRU(300, 128, bidirectional=True)
+    )
+    (sent_att_net): SentAttNet(
+      (gru): GRU(256, 128, bidirectional=True)
+    )
+  )
+  (fact_encoder): HierAttNet(
+    (word_att_net): WordAttNet(
+      (lookup): Embedding(10002, 300)
+      (gru): GRU(300, 128, bidirectional=True)
+    )
+    (sent_att_net): SentAttNet(
+      (gru): GRU(256, 128, bidirectional=True)
+    )
+  )
+  (article_encoder): HierAttNet(
+    (word_att_net): WordAttNet(
+      (lookup): Embedding(229, 300)
+      (gru): GRU(300, 128, bidirectional=True)
+    )
+    (sent_att_net): SentAttNet(
+      (gru): GRU(256, 128, bidirectional=True)
+    )
+  )
+  (fc): Linear(in_features=768, out_features=256, bias=True)
+  (dropout): Dropout(p=0.5, inplace=False)
+  (fc_out): Linear(in_features=512, out_features=2, bias=True)
+  (dropout_out): Dropout(p=0.5, inplace=False)
+)>
+{'model_name': 'HANConcatAlign', 'train_path': 'JXPairS/data/train.csv', 'dev_path': 'JXPairS/data/dev.csv', 'test_path': 'JXPairS/data/test.csv', 'class_list': ['不匹配', '匹配'], 'material_path': '/home/chiyao/projects/HANpytorch/material/', 'vocab_path': 'JXPairS/data/vocab_han.pkl', 'save_path': 'JXPairS/saved_dict/HANConcatAlign.ckpt', 'log_path': 'JXPairS/log/HANConcatAlign', 'embedding_pretrained': None, 'device': device(type='cuda'), 'dropout': 0.5, 'require_improvement': 1000, 'num_classes': 2, 'crime_n_vocab': 384, 'judge_n_vocab': 5296, 'performance_n_vocab': 7159, 'fact_n_vocab': 10002, 'article_n_vocab': 229, 'crime_max_length': 3, 'judge_max_length': (5, 9), 'performance_max_length': (6, 10), 'fact_max_length': (8, 34), 'article_max_length': (8, 8), 'embed': 300, 'crime_hidden_size': 128, 'judge_word_hidden_size': 128, 'judge_sent_hidden_size': 128, 'performance_word_hidden_size': 128, 'performance_sent_hidden_size': 128, 'fact_word_hidden_size': 128, 'fact_sent_hidden_size': 128, 'article_word_hidden_size': 128, 'article_sent_hidden_size': 128, 'num_epochs': 100, 'batch_size': 128, 'learning_rate': 0.001}
+Epoch [1/100]
+Iter:      0,  Train Loss:   0.8,  Train Acc: 53.12%,  Val Loss:  0.72,  Val Acc: 49.94%,  Time: 0:00:03 * 
+Iter:    100,  Train Loss:  0.61,  Train Acc: 67.97%,  Val Loss:  0.55,  Val Acc: 72.64%,  Time: 0:00:41 * 
+Iter:    200,  Train Loss:  0.52,  Train Acc: 70.31%,  Val Loss:  0.52,  Val Acc: 76.19%,  Time: 0:01:18 * 
+Epoch [2/100]
+Iter:    300,  Train Loss:  0.51,  Train Acc: 71.09%,  Val Loss:  0.51,  Val Acc: 76.67%,  Time: 0:01:55 * 
+Iter:    400,  Train Loss:  0.54,  Train Acc: 72.66%,  Val Loss:   0.5,  Val Acc: 75.86%,  Time: 0:02:32 * 
+Epoch [3/100]
+Iter:    500,  Train Loss:   0.5,  Train Acc: 76.56%,  Val Loss:   0.5,  Val Acc: 77.36%,  Time: 0:03:09 * 
+Iter:    600,  Train Loss:  0.41,  Train Acc: 82.03%,  Val Loss:   0.5,  Val Acc: 78.09%,  Time: 0:03:46  
+Iter:    700,  Train Loss:  0.54,  Train Acc: 72.66%,  Val Loss:   0.5,  Val Acc: 76.10%,  Time: 0:04:23 * 
+Epoch [4/100]
+Iter:    800,  Train Loss:   0.5,  Train Acc: 78.12%,  Val Loss:   0.5,  Val Acc: 76.85%,  Time: 0:05:00 * 
+Iter:    900,  Train Loss:  0.45,  Train Acc: 77.34%,  Val Loss:  0.51,  Val Acc: 74.20%,  Time: 0:05:37  
+Epoch [5/100]
+Iter:   1000,  Train Loss:   0.5,  Train Acc: 78.91%,  Val Loss:  0.51,  Val Acc: 75.29%,  Time: 0:06:14  
+Iter:   1100,  Train Loss:  0.48,  Train Acc: 77.34%,  Val Loss:  0.51,  Val Acc: 73.87%,  Time: 0:06:51  
+Epoch [6/100]
+Iter:   1200,  Train Loss:  0.45,  Train Acc: 80.47%,  Val Loss:  0.51,  Val Acc: 76.25%,  Time: 0:07:28  
+Iter:   1300,  Train Loss:  0.47,  Train Acc: 74.22%,  Val Loss:  0.51,  Val Acc: 76.49%,  Time: 0:08:05  
+Iter:   1400,  Train Loss:  0.46,  Train Acc: 75.78%,  Val Loss:  0.52,  Val Acc: 71.31%,  Time: 0:08:42  
+Epoch [7/100]
+Iter:   1500,  Train Loss:   0.5,  Train Acc: 75.78%,  Val Loss:  0.53,  Val Acc: 74.62%,  Time: 0:09:18  
+Iter:   1600,  Train Loss:  0.58,  Train Acc: 67.19%,  Val Loss:  0.55,  Val Acc: 75.11%,  Time: 0:09:55  
+Epoch [8/100]
+Iter:   1700,  Train Loss:  0.42,  Train Acc: 77.34%,  Val Loss:  0.53,  Val Acc: 74.50%,  Time: 0:10:32  
+Iter:   1800,  Train Loss:  0.49,  Train Acc: 73.44%,  Val Loss:  0.52,  Val Acc: 75.17%,  Time: 0:11:09  
+No optimization for a long time, auto-stopping...
+Test Loss:   0.5,  Test Acc: 76.55%
+Precision, Recall and F1-Score...
+              precision    recall  f1-score   support
+
+         不匹配     0.7696    0.7580    0.7637      1661
+          匹配     0.7616    0.7730    0.7673      1661
+
+    accuracy                         0.7655      3322
+   macro avg     0.7656    0.7655    0.7655      3322
+weighted avg     0.7656    0.7655    0.7655      3322
+
+Confusion Matrix...
+[[1259  402]
+ [ 377 1284]]
+Time usage: 0:00:03
+
+Process finished with exit code 0
+
+```
+
+
+
+### HANConcatAlign 77.18%
+
+```
+ssh://chiyao@10.176.37.201:22/home/chiyao/anaconda3/envs/han/bin/python -u /home/chiyao/projects/Chinese-Text-Classification-Pytorch/run.py --model HANConcatAlign
+HANConcatAlign
+Loading data...
+Vocab size: crime: 384, judge: 5296, performance: 7159, fact: 10002, article: 229
+crime_max_length 3
+judge_max_length (5, 9)
+performance_max_length (6, 10)
+fact_max_length (8, 34)
+article_max_length (8, 8)
+30012it [00:20, 1436.95it/s]
+3322it [00:02, 1459.94it/s]
+3322it [00:02, 1456.83it/s]
+train dataset len: 30012
+dev dataset len: 3322
+test dataset len: 3322
+Time usage: 0:00:33
+<bound method Module.parameters of Model(
+  (crime_encoder): WordAttNet(
+    (lookup): Embedding(384, 300)
+    (gru): GRU(300, 128, bidirectional=True)
+  )
+  (judge_encoder): HierAttNet(
+    (word_att_net): WordAttNet(
+      (lookup): Embedding(5296, 300)
+      (gru): GRU(300, 128, bidirectional=True)
+    )
+    (sent_att_net): SentAttNet(
+      (gru): GRU(256, 128, bidirectional=True)
+    )
+  )
+  (performance_encoder): HierAttNet(
+    (word_att_net): WordAttNet(
+      (lookup): Embedding(7159, 300)
+      (gru): GRU(300, 128, bidirectional=True)
+    )
+    (sent_att_net): SentAttNet(
+      (gru): GRU(256, 128, bidirectional=True)
+    )
+  )
+  (fact_encoder): HierAttNet(
+    (word_att_net): WordAttNet(
+      (lookup): Embedding(10002, 300)
+      (gru): GRU(300, 128, bidirectional=True)
+    )
+    (sent_att_net): SentAttNet(
+      (gru): GRU(256, 128, bidirectional=True)
+    )
+  )
+  (article_encoder): HierAttNet(
+    (word_att_net): WordAttNet(
+      (lookup): Embedding(229, 300)
+      (gru): GRU(300, 128, bidirectional=True)
+    )
+    (sent_att_net): SentAttNet(
+      (gru): GRU(256, 128, bidirectional=True)
+    )
+  )
+  (fc): Linear(in_features=768, out_features=256, bias=True)
+  (dropout): Dropout(p=0, inplace=False)
+  (fc_out): Linear(in_features=512, out_features=2, bias=True)
+  (dropout_out): Dropout(p=0, inplace=False)
+)>
+{'model_name': 'HANConcatAlign', 'train_path': 'JXPairS/data/train.csv', 'dev_path': 'JXPairS/data/dev.csv', 'test_path': 'JXPairS/data/test.csv', 'class_list': ['不匹配', '匹配'], 'material_path': '/home/chiyao/projects/HANpytorch/material/', 'vocab_path': 'JXPairS/data/vocab_han.pkl', 'save_path': 'JXPairS/saved_dict/HANConcatAlign.ckpt', 'log_path': 'JXPairS/log/HANConcatAlign', 'embedding_pretrained': None, 'device': device(type='cuda'), 'dropout': 0, 'require_improvement': 1000, 'num_classes': 2, 'crime_n_vocab': 384, 'judge_n_vocab': 5296, 'performance_n_vocab': 7159, 'fact_n_vocab': 10002, 'article_n_vocab': 229, 'crime_max_length': 3, 'judge_max_length': (5, 9), 'performance_max_length': (6, 10), 'fact_max_length': (8, 34), 'article_max_length': (8, 8), 'embed': 300, 'crime_hidden_size': 128, 'judge_word_hidden_size': 128, 'judge_sent_hidden_size': 128, 'performance_word_hidden_size': 128, 'performance_sent_hidden_size': 128, 'fact_word_hidden_size': 128, 'fact_sent_hidden_size': 128, 'article_word_hidden_size': 128, 'article_sent_hidden_size': 128, 'num_epochs': 100, 'batch_size': 128, 'learning_rate': 0.001}
+Epoch [1/100]
+Iter:      0,  Train Loss:  0.71,  Train Acc: 52.34%,  Val Loss:  0.72,  Val Acc: 49.16%,  Time: 0:00:03 * 
+Iter:    100,  Train Loss:  0.52,  Train Acc: 78.91%,  Val Loss:  0.56,  Val Acc: 72.58%,  Time: 0:00:41 * 
+Iter:    200,  Train Loss:  0.52,  Train Acc: 73.44%,  Val Loss:  0.53,  Val Acc: 75.08%,  Time: 0:01:18 * 
+Epoch [2/100]
+Iter:    300,  Train Loss:  0.52,  Train Acc: 75.78%,  Val Loss:  0.52,  Val Acc: 77.42%,  Time: 0:01:55 * 
+Iter:    400,  Train Loss:  0.53,  Train Acc: 73.44%,  Val Loss:  0.51,  Val Acc: 75.44%,  Time: 0:02:32 * 
+Epoch [3/100]
+Iter:    500,  Train Loss:  0.48,  Train Acc: 77.34%,  Val Loss:   0.5,  Val Acc: 77.45%,  Time: 0:03:09 * 
+Iter:    600,  Train Loss:  0.42,  Train Acc: 82.81%,  Val Loss:   0.5,  Val Acc: 77.69%,  Time: 0:03:46  
+Iter:    700,  Train Loss:  0.52,  Train Acc: 75.00%,  Val Loss:   0.5,  Val Acc: 76.55%,  Time: 0:04:21 * 
+Epoch [4/100]
+Iter:    800,  Train Loss:  0.49,  Train Acc: 77.34%,  Val Loss:   0.5,  Val Acc: 77.12%,  Time: 0:04:49 * 
+Iter:    900,  Train Loss:  0.45,  Train Acc: 76.56%,  Val Loss:  0.51,  Val Acc: 73.06%,  Time: 0:05:16  
+Epoch [5/100]
+Iter:   1000,  Train Loss:  0.47,  Train Acc: 79.69%,  Val Loss:  0.51,  Val Acc: 74.65%,  Time: 0:05:44  
+Iter:   1100,  Train Loss:  0.47,  Train Acc: 80.47%,  Val Loss:  0.51,  Val Acc: 73.87%,  Time: 0:06:12  
+Epoch [6/100]
+Iter:   1200,  Train Loss:  0.42,  Train Acc: 83.59%,  Val Loss:  0.51,  Val Acc: 78.27%,  Time: 0:06:40  
+Iter:   1300,  Train Loss:  0.45,  Train Acc: 77.34%,  Val Loss:  0.51,  Val Acc: 76.64%,  Time: 0:07:08  
+Iter:   1400,  Train Loss:  0.46,  Train Acc: 74.22%,  Val Loss:  0.51,  Val Acc: 73.48%,  Time: 0:07:36  
+Epoch [7/100]
+Iter:   1500,  Train Loss:   0.5,  Train Acc: 75.78%,  Val Loss:  0.54,  Val Acc: 74.08%,  Time: 0:08:10  
+Iter:   1600,  Train Loss:  0.57,  Train Acc: 73.44%,  Val Loss:  0.56,  Val Acc: 73.75%,  Time: 0:08:47  
+Epoch [8/100]
+Iter:   1700,  Train Loss:  0.37,  Train Acc: 78.91%,  Val Loss:  0.56,  Val Acc: 72.97%,  Time: 0:09:24  
+Iter:   1800,  Train Loss:  0.46,  Train Acc: 78.12%,  Val Loss:  0.53,  Val Acc: 75.26%,  Time: 0:10:01  
+No optimization for a long time, auto-stopping...
+Test Loss:   0.5,  Test Acc: 77.18%
+Precision, Recall and F1-Score...
+              precision    recall  f1-score   support
+
+         不匹配     0.7785    0.7598    0.7690      1661
+          匹配     0.7654    0.7839    0.7745      1661
+
+    accuracy                         0.7718      3322
+   macro avg     0.7720    0.7718    0.7718      3322
+weighted avg     0.7720    0.7718    0.7718      3322
+
+Confusion Matrix...
+[[1262  399]
+ [ 359 1302]]
+Time usage: 0:00:03
+
+Process finished with exit code 0
+
+```
+
+
+
+### HANConcatAlign 76.16%
+
+```
+ssh://chiyao@10.176.37.201:22/home/chiyao/anaconda3/envs/han/bin/python -u /home/chiyao/projects/Chinese-Text-Classification-Pytorch/run.py --model HANConcatAlign
+HANConcatAlign
+Loading data...
+Vocab size: crime: 384, judge: 5296, performance: 7159, fact: 10002, article: 229
+crime_max_length 3
+judge_max_length (5, 9)
+performance_max_length (6, 10)
+fact_max_length (8, 34)
+article_max_length (8, 8)
+30012it [00:21, 1411.34it/s]
+3322it [00:02, 1436.97it/s]
+3322it [00:02, 1433.79it/s]
+train dataset len: 30012
+dev dataset len: 3322
+test dataset len: 3322
+Time usage: 0:00:33
+<bound method Module.parameters of Model(
+  (crime_encoder): WordAttNet(
+    (lookup): Embedding(384, 300)
+    (gru): GRU(300, 128, bidirectional=True)
+  )
+  (judge_encoder): HierAttNet(
+    (word_att_net): WordAttNet(
+      (lookup): Embedding(5296, 300)
+      (gru): GRU(300, 128, bidirectional=True)
+    )
+    (sent_att_net): SentAttNet(
+      (gru): GRU(256, 128, bidirectional=True)
+    )
+  )
+  (performance_encoder): HierAttNet(
+    (word_att_net): WordAttNet(
+      (lookup): Embedding(7159, 300)
+      (gru): GRU(300, 128, bidirectional=True)
+    )
+    (sent_att_net): SentAttNet(
+      (gru): GRU(256, 128, bidirectional=True)
+    )
+  )
+  (fact_encoder): HierAttNet(
+    (word_att_net): WordAttNet(
+      (lookup): Embedding(10002, 300)
+      (gru): GRU(300, 128, bidirectional=True)
+    )
+    (sent_att_net): SentAttNet(
+      (gru): GRU(256, 128, bidirectional=True)
+    )
+  )
+  (article_encoder): HierAttNet(
+    (word_att_net): WordAttNet(
+      (lookup): Embedding(229, 300)
+      (gru): GRU(300, 128, bidirectional=True)
+    )
+    (sent_att_net): SentAttNet(
+      (gru): GRU(256, 128, bidirectional=True)
+    )
+  )
+  (fc): Linear(in_features=768, out_features=256, bias=True)
+  (dropout): Dropout(p=0.6, inplace=False)
+  (fc_out): Linear(in_features=512, out_features=2, bias=True)
+  (dropout_out): Dropout(p=0.6, inplace=False)
+)>
+{'model_name': 'HANConcatAlign', 'train_path': 'JXPairS/data/train.csv', 'dev_path': 'JXPairS/data/dev.csv', 'test_path': 'JXPairS/data/test.csv', 'class_list': ['不匹配', '匹配'], 'material_path': '/home/chiyao/projects/HANpytorch/material/', 'vocab_path': 'JXPairS/data/vocab_han.pkl', 'save_path': 'JXPairS/saved_dict/HANConcatAlign.ckpt', 'log_path': 'JXPairS/log/HANConcatAlign', 'embedding_pretrained': None, 'device': device(type='cuda'), 'dropout': 0.6, 'require_improvement': 1000, 'num_classes': 2, 'crime_n_vocab': 384, 'judge_n_vocab': 5296, 'performance_n_vocab': 7159, 'fact_n_vocab': 10002, 'article_n_vocab': 229, 'crime_max_length': 3, 'judge_max_length': (5, 9), 'performance_max_length': (6, 10), 'fact_max_length': (8, 34), 'article_max_length': (8, 8), 'embed': 300, 'crime_hidden_size': 128, 'judge_word_hidden_size': 128, 'judge_sent_hidden_size': 128, 'performance_word_hidden_size': 128, 'performance_sent_hidden_size': 128, 'fact_word_hidden_size': 128, 'fact_sent_hidden_size': 128, 'article_word_hidden_size': 128, 'article_sent_hidden_size': 128, 'num_epochs': 100, 'batch_size': 128, 'learning_rate': 0.001}
+Epoch [1/100]
+Iter:      0,  Train Loss:  0.84,  Train Acc: 43.75%,  Val Loss:  0.72,  Val Acc: 49.79%,  Time: 0:00:03 * 
+Iter:    100,  Train Loss:  0.59,  Train Acc: 68.75%,  Val Loss:  0.55,  Val Acc: 73.27%,  Time: 0:00:40 * 
+Iter:    200,  Train Loss:  0.49,  Train Acc: 75.00%,  Val Loss:  0.52,  Val Acc: 75.53%,  Time: 0:01:18 * 
+Epoch [2/100]
+Iter:    300,  Train Loss:  0.52,  Train Acc: 75.78%,  Val Loss:  0.51,  Val Acc: 77.48%,  Time: 0:01:55 * 
+Iter:    400,  Train Loss:  0.54,  Train Acc: 68.75%,  Val Loss:   0.5,  Val Acc: 76.58%,  Time: 0:02:32 * 
+Epoch [3/100]
+Iter:    500,  Train Loss:   0.5,  Train Acc: 77.34%,  Val Loss:   0.5,  Val Acc: 77.66%,  Time: 0:03:09 * 
+Iter:    600,  Train Loss:  0.43,  Train Acc: 82.03%,  Val Loss:  0.51,  Val Acc: 78.00%,  Time: 0:03:46  
+Iter:    700,  Train Loss:  0.55,  Train Acc: 75.00%,  Val Loss:   0.5,  Val Acc: 76.64%,  Time: 0:04:22  
+Epoch [4/100]
+Iter:    800,  Train Loss:   0.5,  Train Acc: 76.56%,  Val Loss:   0.5,  Val Acc: 76.16%,  Time: 0:04:59 * 
+Iter:    900,  Train Loss:  0.45,  Train Acc: 77.34%,  Val Loss:  0.51,  Val Acc: 73.90%,  Time: 0:05:36  
+Epoch [5/100]
+Iter:   1000,  Train Loss:  0.53,  Train Acc: 75.78%,  Val Loss:  0.51,  Val Acc: 74.50%,  Time: 0:06:13  
+Iter:   1100,  Train Loss:   0.5,  Train Acc: 77.34%,  Val Loss:  0.51,  Val Acc: 74.65%,  Time: 0:06:50  
+Epoch [6/100]
+Iter:   1200,  Train Loss:  0.46,  Train Acc: 79.69%,  Val Loss:  0.51,  Val Acc: 77.18%,  Time: 0:07:27  
+Iter:   1300,  Train Loss:  0.46,  Train Acc: 75.00%,  Val Loss:  0.51,  Val Acc: 75.53%,  Time: 0:08:04  
+Iter:   1400,  Train Loss:  0.46,  Train Acc: 71.88%,  Val Loss:  0.53,  Val Acc: 70.56%,  Time: 0:08:41  
+Epoch [7/100]
+Iter:   1500,  Train Loss:  0.49,  Train Acc: 72.66%,  Val Loss:  0.52,  Val Acc: 74.05%,  Time: 0:09:17  
+Iter:   1600,  Train Loss:  0.58,  Train Acc: 70.31%,  Val Loss:  0.53,  Val Acc: 75.98%,  Time: 0:09:54  
+Epoch [8/100]
+Iter:   1700,  Train Loss:  0.43,  Train Acc: 75.78%,  Val Loss:  0.52,  Val Acc: 76.25%,  Time: 0:10:31  
+Iter:   1800,  Train Loss:  0.48,  Train Acc: 75.00%,  Val Loss:  0.52,  Val Acc: 75.53%,  Time: 0:11:08  
+No optimization for a long time, auto-stopping...
+Test Loss:   0.5,  Test Acc: 76.16%
+Precision, Recall and F1-Score...
+              precision    recall  f1-score   support
+
+         不匹配     0.7622    0.7604    0.7613      1661
+          匹配     0.7610    0.7628    0.7619      1661
+
+    accuracy                         0.7616      3322
+   macro avg     0.7616    0.7616    0.7616      3322
+weighted avg     0.7616    0.7616    0.7616      3322
+
+Confusion Matrix...
+[[1263  398]
+ [ 394 1267]]
+Time usage: 0:00:03
+
+Process finished with exit code 0
+
+```
+
+
+
+### HANConcatAlign 75.98%
+
+```
+ssh://chiyao@10.176.37.201:22/home/chiyao/anaconda3/envs/han/bin/python -u /home/chiyao/projects/Chinese-Text-Classification-Pytorch/run.py --model HANConcatAlign
+HANConcatAlign
+Loading data...
+Vocab size: crime: 384, judge: 5296, performance: 7159, fact: 10002, article: 229
+crime_max_length 3
+judge_max_length (5, 9)
+performance_max_length (6, 10)
+fact_max_length (8, 34)
+article_max_length (8, 8)
+30012it [00:21, 1384.92it/s]
+3322it [00:02, 1407.48it/s]
+3322it [00:02, 1396.06it/s]
+train dataset len: 30012
+dev dataset len: 3322
+test dataset len: 3322
+Time usage: 0:00:34
+<bound method Module.parameters of Model(
+  (crime_encoder): WordAttNet(
+    (lookup): Embedding(384, 300)
+    (gru): GRU(300, 128, bidirectional=True)
+  )
+  (judge_encoder): HierAttNet(
+    (word_att_net): WordAttNet(
+      (lookup): Embedding(5296, 300)
+      (gru): GRU(300, 128, bidirectional=True)
+    )
+    (sent_att_net): SentAttNet(
+      (gru): GRU(256, 128, bidirectional=True)
+    )
+  )
+  (performance_encoder): HierAttNet(
+    (word_att_net): WordAttNet(
+      (lookup): Embedding(7159, 300)
+      (gru): GRU(300, 128, bidirectional=True)
+    )
+    (sent_att_net): SentAttNet(
+      (gru): GRU(256, 128, bidirectional=True)
+    )
+  )
+  (fact_encoder): HierAttNet(
+    (word_att_net): WordAttNet(
+      (lookup): Embedding(10002, 300)
+      (gru): GRU(300, 128, bidirectional=True)
+    )
+    (sent_att_net): SentAttNet(
+      (gru): GRU(256, 128, bidirectional=True)
+    )
+  )
+  (article_encoder): HierAttNet(
+    (word_att_net): WordAttNet(
+      (lookup): Embedding(229, 300)
+      (gru): GRU(300, 128, bidirectional=True)
+    )
+    (sent_att_net): SentAttNet(
+      (gru): GRU(256, 128, bidirectional=True)
+    )
+  )
+  (fc): Linear(in_features=768, out_features=256, bias=True)
+  (dropout): Dropout(p=0.7, inplace=False)
+  (fc_out): Linear(in_features=512, out_features=2, bias=True)
+  (dropout_out): Dropout(p=0.7, inplace=False)
+)>
+{'model_name': 'HANConcatAlign', 'train_path': 'JXPairS/data/train.csv', 'dev_path': 'JXPairS/data/dev.csv', 'test_path': 'JXPairS/data/test.csv', 'class_list': ['不匹配', '匹配'], 'material_path': '/home/chiyao/projects/HANpytorch/material/', 'vocab_path': 'JXPairS/data/vocab_han.pkl', 'save_path': 'JXPairS/saved_dict/HANConcatAlign.ckpt', 'log_path': 'JXPairS/log/HANConcatAlign', 'embedding_pretrained': None, 'device': device(type='cuda'), 'dropout': 0.7, 'require_improvement': 1000, 'num_classes': 2, 'crime_n_vocab': 384, 'judge_n_vocab': 5296, 'performance_n_vocab': 7159, 'fact_n_vocab': 10002, 'article_n_vocab': 229, 'crime_max_length': 3, 'judge_max_length': (5, 9), 'performance_max_length': (6, 10), 'fact_max_length': (8, 34), 'article_max_length': (8, 8), 'embed': 300, 'crime_hidden_size': 128, 'judge_word_hidden_size': 128, 'judge_sent_hidden_size': 128, 'performance_word_hidden_size': 128, 'performance_sent_hidden_size': 128, 'fact_word_hidden_size': 128, 'fact_sent_hidden_size': 128, 'article_word_hidden_size': 128, 'article_sent_hidden_size': 128, 'num_epochs': 100, 'batch_size': 128, 'learning_rate': 0.001}
+Epoch [1/100]
+Iter:      0,  Train Loss:  0.98,  Train Acc: 44.53%,  Val Loss:  0.72,  Val Acc: 49.58%,  Time: 0:00:03 * 
+Iter:    100,  Train Loss:   0.6,  Train Acc: 69.53%,  Val Loss:  0.55,  Val Acc: 71.97%,  Time: 0:00:40 * 
+Iter:    200,  Train Loss:  0.52,  Train Acc: 71.88%,  Val Loss:  0.52,  Val Acc: 75.89%,  Time: 0:01:18 * 
+Epoch [2/100]
+Iter:    300,  Train Loss:  0.52,  Train Acc: 75.78%,  Val Loss:  0.51,  Val Acc: 77.78%,  Time: 0:01:56 * 
+Iter:    400,  Train Loss:  0.55,  Train Acc: 67.97%,  Val Loss:   0.5,  Val Acc: 75.50%,  Time: 0:02:33 * 
+Epoch [3/100]
+Iter:    500,  Train Loss:  0.54,  Train Acc: 75.00%,  Val Loss:   0.5,  Val Acc: 76.91%,  Time: 0:03:11 * 
+Iter:    600,  Train Loss:  0.42,  Train Acc: 78.91%,  Val Loss:  0.51,  Val Acc: 78.51%,  Time: 0:03:48  
+Iter:    700,  Train Loss:  0.55,  Train Acc: 73.44%,  Val Loss:   0.5,  Val Acc: 76.49%,  Time: 0:04:25 * 
+Epoch [4/100]
+Iter:    800,  Train Loss:  0.54,  Train Acc: 74.22%,  Val Loss:   0.5,  Val Acc: 75.59%,  Time: 0:05:02  
+Iter:    900,  Train Loss:  0.46,  Train Acc: 78.12%,  Val Loss:   0.5,  Val Acc: 74.92%,  Time: 0:05:39  
+Epoch [5/100]
+Iter:   1000,  Train Loss:  0.49,  Train Acc: 76.56%,  Val Loss:  0.51,  Val Acc: 74.14%,  Time: 0:06:16  
+Iter:   1100,  Train Loss:  0.48,  Train Acc: 77.34%,  Val Loss:  0.51,  Val Acc: 74.71%,  Time: 0:06:53  
+Epoch [6/100]
+Iter:   1200,  Train Loss:  0.43,  Train Acc: 82.03%,  Val Loss:  0.51,  Val Acc: 75.80%,  Time: 0:07:30  
+Iter:   1300,  Train Loss:  0.46,  Train Acc: 78.12%,  Val Loss:  0.51,  Val Acc: 75.95%,  Time: 0:08:08  
+Iter:   1400,  Train Loss:  0.44,  Train Acc: 75.00%,  Val Loss:  0.52,  Val Acc: 72.10%,  Time: 0:08:44  
+Epoch [7/100]
+Iter:   1500,  Train Loss:  0.45,  Train Acc: 75.00%,  Val Loss:  0.52,  Val Acc: 74.62%,  Time: 0:09:21  
+Iter:   1600,  Train Loss:  0.59,  Train Acc: 70.31%,  Val Loss:  0.53,  Val Acc: 76.07%,  Time: 0:09:58  
+Epoch [8/100]
+Iter:   1700,  Train Loss:  0.43,  Train Acc: 77.34%,  Val Loss:  0.53,  Val Acc: 75.11%,  Time: 0:10:35  
+No optimization for a long time, auto-stopping...
+Test Loss:   0.5,  Test Acc: 75.98%
+Precision, Recall and F1-Score...
+              precision    recall  f1-score   support
+
+         不匹配     0.7649    0.7502    0.7574      1661
+          匹配     0.7549    0.7694    0.7621      1661
+
+    accuracy                         0.7598      3322
+   macro avg     0.7599    0.7598    0.7598      3322
+weighted avg     0.7599    0.7598    0.7598      3322
+
+Confusion Matrix...
+[[1246  415]
+ [ 383 1278]]
+Time usage: 0:00:03
+
+Process finished with exit code 0
+
+```
+
+
+
+### HANConcatAlign 75.53%
+
+```
+ssh://chiyao@10.176.37.201:22/home/chiyao/anaconda3/envs/han/bin/python -u /home/chiyao/projects/Chinese-Text-Classification-Pytorch/run.py --model HANConcatAlign
+HANConcatAlign
+Loading data...
+Vocab size: crime: 384, judge: 5296, performance: 7159, fact: 10002, article: 229
+crime_max_length 3
+judge_max_length (5, 9)
+performance_max_length (6, 10)
+fact_max_length (8, 34)
+article_max_length (8, 8)
+30012it [00:20, 1440.46it/s]
+3322it [00:02, 1468.98it/s]
+3322it [00:02, 1461.67it/s]
+train dataset len: 30012
+dev dataset len: 3322
+test dataset len: 3322
+Time usage: 0:00:33
+<bound method Module.parameters of Model(
+  (crime_encoder): WordAttNet(
+    (lookup): Embedding(384, 300)
+    (gru): GRU(300, 128, bidirectional=True)
+  )
+  (judge_encoder): HierAttNet(
+    (word_att_net): WordAttNet(
+      (lookup): Embedding(5296, 300)
+      (gru): GRU(300, 128, bidirectional=True)
+    )
+    (sent_att_net): SentAttNet(
+      (gru): GRU(256, 128, bidirectional=True)
+    )
+  )
+  (performance_encoder): HierAttNet(
+    (word_att_net): WordAttNet(
+      (lookup): Embedding(7159, 300)
+      (gru): GRU(300, 128, bidirectional=True)
+    )
+    (sent_att_net): SentAttNet(
+      (gru): GRU(256, 128, bidirectional=True)
+    )
+  )
+  (fact_encoder): HierAttNet(
+    (word_att_net): WordAttNet(
+      (lookup): Embedding(10002, 300)
+      (gru): GRU(300, 128, bidirectional=True)
+    )
+    (sent_att_net): SentAttNet(
+      (gru): GRU(256, 128, bidirectional=True)
+    )
+  )
+  (article_encoder): HierAttNet(
+    (word_att_net): WordAttNet(
+      (lookup): Embedding(229, 300)
+      (gru): GRU(300, 128, bidirectional=True)
+    )
+    (sent_att_net): SentAttNet(
+      (gru): GRU(256, 128, bidirectional=True)
+    )
+  )
+  (fc): Linear(in_features=768, out_features=256, bias=True)
+  (dropout): Dropout(p=0.8, inplace=False)
+  (fc_out): Linear(in_features=512, out_features=2, bias=True)
+  (dropout_out): Dropout(p=0.8, inplace=False)
+)>
+{'model_name': 'HANConcatAlign', 'train_path': 'JXPairS/data/train.csv', 'dev_path': 'JXPairS/data/dev.csv', 'test_path': 'JXPairS/data/test.csv', 'class_list': ['不匹配', '匹配'], 'material_path': '/home/chiyao/projects/HANpytorch/material/', 'vocab_path': 'JXPairS/data/vocab_han.pkl', 'save_path': 'JXPairS/saved_dict/HANConcatAlign.ckpt', 'log_path': 'JXPairS/log/HANConcatAlign', 'embedding_pretrained': None, 'device': device(type='cuda'), 'dropout': 0.8, 'require_improvement': 1000, 'num_classes': 2, 'crime_n_vocab': 384, 'judge_n_vocab': 5296, 'performance_n_vocab': 7159, 'fact_n_vocab': 10002, 'article_n_vocab': 229, 'crime_max_length': 3, 'judge_max_length': (5, 9), 'performance_max_length': (6, 10), 'fact_max_length': (8, 34), 'article_max_length': (8, 8), 'embed': 300, 'crime_hidden_size': 128, 'judge_word_hidden_size': 128, 'judge_sent_hidden_size': 128, 'performance_word_hidden_size': 128, 'performance_sent_hidden_size': 128, 'fact_word_hidden_size': 128, 'fact_sent_hidden_size': 128, 'article_word_hidden_size': 128, 'article_sent_hidden_size': 128, 'num_epochs': 100, 'batch_size': 128, 'learning_rate': 0.001}
+Epoch [1/100]
+Iter:      0,  Train Loss:   1.2,  Train Acc: 50.78%,  Val Loss:  0.72,  Val Acc: 49.94%,  Time: 0:00:03 * 
+Iter:    100,  Train Loss:  0.66,  Train Acc: 67.19%,  Val Loss:  0.57,  Val Acc: 72.61%,  Time: 0:00:40 * 
+Iter:    200,  Train Loss:  0.55,  Train Acc: 68.75%,  Val Loss:  0.52,  Val Acc: 74.68%,  Time: 0:01:17 * 
+Epoch [2/100]
+Iter:    300,  Train Loss:  0.51,  Train Acc: 77.34%,  Val Loss:   0.5,  Val Acc: 77.09%,  Time: 0:01:54 * 
+Iter:    400,  Train Loss:  0.55,  Train Acc: 72.66%,  Val Loss:   0.5,  Val Acc: 75.50%,  Time: 0:02:31 * 
+Epoch [3/100]
+Iter:    500,  Train Loss:  0.53,  Train Acc: 75.00%,  Val Loss:   0.5,  Val Acc: 77.57%,  Time: 0:03:08 * 
+Iter:    600,  Train Loss:  0.44,  Train Acc: 80.47%,  Val Loss:   0.5,  Val Acc: 78.06%,  Time: 0:03:45  
+Iter:    700,  Train Loss:  0.55,  Train Acc: 73.44%,  Val Loss:   0.5,  Val Acc: 75.35%,  Time: 0:04:21 * 
+Epoch [4/100]
+Iter:    800,  Train Loss:  0.52,  Train Acc: 75.00%,  Val Loss:   0.5,  Val Acc: 75.35%,  Time: 0:04:57  
+Iter:    900,  Train Loss:  0.49,  Train Acc: 72.66%,  Val Loss:   0.5,  Val Acc: 74.59%,  Time: 0:05:34  
+Epoch [5/100]
+Iter:   1000,  Train Loss:  0.52,  Train Acc: 75.00%,  Val Loss:  0.51,  Val Acc: 74.38%,  Time: 0:06:11  
+Iter:   1100,  Train Loss:   0.5,  Train Acc: 75.00%,  Val Loss:  0.51,  Val Acc: 75.86%,  Time: 0:06:48  
+Epoch [6/100]
+Iter:   1200,  Train Loss:  0.43,  Train Acc: 83.59%,  Val Loss:   0.5,  Val Acc: 78.33%,  Time: 0:07:25  
+Iter:   1300,  Train Loss:  0.45,  Train Acc: 75.78%,  Val Loss:  0.51,  Val Acc: 76.73%,  Time: 0:08:01  
+Iter:   1400,  Train Loss:  0.45,  Train Acc: 72.66%,  Val Loss:  0.52,  Val Acc: 71.85%,  Time: 0:08:38  
+Epoch [7/100]
+Iter:   1500,  Train Loss:  0.49,  Train Acc: 76.56%,  Val Loss:  0.52,  Val Acc: 74.95%,  Time: 0:09:15  
+Iter:   1600,  Train Loss:  0.58,  Train Acc: 71.09%,  Val Loss:  0.53,  Val Acc: 77.48%,  Time: 0:09:52  
+Epoch [8/100]
+Iter:   1700,  Train Loss:  0.44,  Train Acc: 79.69%,  Val Loss:  0.52,  Val Acc: 76.22%,  Time: 0:10:29  
+No optimization for a long time, auto-stopping...
+Test Loss:   0.5,  Test Acc: 75.53%
+Precision, Recall and F1-Score...
+              precision    recall  f1-score   support
+
+         不匹配     0.7524    0.7610    0.7567      1661
+          匹配     0.7582    0.7495    0.7539      1661
+
+    accuracy                         0.7553      3322
+   macro avg     0.7553    0.7553    0.7553      3322
+weighted avg     0.7553    0.7553    0.7553      3322
+
+Confusion Matrix...
+[[1264  397]
+ [ 416 1245]]
+Time usage: 0:00:03
+
+Process finished with exit code 0
+
+```
+
+
+
 ## DPCNNAlign 72.97%
 
 ```
